--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
+    "babel-polyfill": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^3.0.0",
     "gulp-open": "^1.0.0",
