--- a/externalModules/tsconfig.json
+++ b/externalModules/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "target": "es5",
-    "module": "commonjs",
+    "module": "amd",
     "removeComments": true
   }
 }
