--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "angular-typescript",
+  "name": "typescript-patterns",
   "version": "1.0.0",
-  "description": "AngularJS 2 + TypeScript bootstrap",
+  "description": "TypeScript bootstrap",
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
     "babel-polyfill": "^6.5.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^2.2.0",
     "gulp-open": "^1.0.0",
-    "gulp-typescript": "^2.12.0"
+    "gulp-typescript": "^2.12.0",
+    "tsify": "^0.13.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
